1st draft to a README.

--- a/PollEverywhere/README.me
+++ b/PollEverywhere/README.me
@@ -1,1 +1,7 @@
-Testing
+# PollEverywhere surveys  
+
+PollEverywhere surveys are a great tool to increase student engagement and assess student comprehension. Educators will commonly engage students by asking the class questions, but not all students have the confidence to speak up in front of the class. PollEverywhere surveys enable students to answer questions behind a screen while also relaying their answers to the instructor. For the instructor, these surveys serve as a quick class assessment whether students are comprehending the topic as intended and if they must clarify anything before moving onto the next topic. PollEverywhere can be implemented as frequently as the instructor prefers, and the results are recorded. Instructors can utilize these results to grade students on participation, and with new features like geolocation, this ensures students must be present in-person to get credit for their participation.  
+
+I highly encourage instructors to integrate PollEverywhere surveys into their course design, and I am sharing this repository to help you begin that process. I have included both example data and folder structure to excute my code and process your PollEverywhere results. My code was based on PollEverywhere exported csv files and Canvas requirements for the University of California Irvine. I would recommend trying to implement this code on example surveys of your own in a "sandbox" Canvas course before integrating it within a course; it's good practice to test it beforehand because it's almost guarenteed that something will not go as intended.  
+
+I hope this repository is helpful, and I'm sure your students will appreciate your efforts to improve your courses. Good luck!
